fixed z-index

--- a/components/Ad/ad.module.scss
+++ b/components/Ad/ad.module.scss
@@ -8,7 +8,7 @@
   grid-template-columns: auto auto;
   background-color: $cl-white;
   border-radius: 0 0 $box-radius $box-radius;
-  padding: 2rem;
+  padding: 1rem;
   gap: 1rem;
 }
 
