--- a/components/Grid/Grid.module.scss
+++ b/components/Grid/Grid.module.scss
@@ -45,7 +45,7 @@
 
 .container {
   background-color: $cl-white;
-  padding: 2rem;
+  padding: 1rem;
   margin: 0.3rem 0;
   border-radius: $box-radius;
 
